{{$NEXT}}

0.005     Oct 27 2019
	* fix repeat_catch misbehavior on instances

0.004     Oct 24 2019

0.003     Oct 24 2019
	* added repeat_catch method

0.002     Oct 01 2019
        * added Role::Tiny prereq

0.001     Sep 30 2019
        * Initial version